src/main/resources/templates/ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create EC2 instance and security group"
Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro]
    Description: "EC2 instance type"
  KeyName:
    Type: "AWS::EC2::KeyPair::KeyName"
    Default: "my-ec2"
    Description: "SSH key pair"
  LatestAmiId:
    Type: "AWS::EC2::Image::Id"
    Default: "ami-0b03299ddb99998e9"
    Description: "AMI ID for the EC2 instance"
Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allow access from HTTP, SSH, 8080, and 3306"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
  WebServer:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y docker
          systemctl start docker
          systemctl enable docker
Outputs:
  WebsiteURL:
    Value: !Sub "http://${WebServer.PublicDnsName}"
    Description: "Web server URL"
